# zero2prod

./: Cargo.toml  Dockerfile  docker-compose.yml  fly.toml  settings.yaml  sqlx-data.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  dev.yml
migrations/: 20230225141329_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh  migrate.ts
settings/: base.yaml  local.yaml  prod.yaml
src/: domain.rs  email.rs  lib.rs  main.rs  routes.rs  settings.rs  telemetry.rs
src/routes/: home.html  login.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/common/: mod.rs
