[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.3.0"
chrono = "0.4.23"
config = "0.13.3"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
uuid = { version = "1.3.0", features = ["v4"] }
