[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.3.0"
config = "0.13.3"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "macros", "uuid", "time", "migrate"] }
time = "0.3.19"
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
uuid = { version = "1.3.0", features = ["v4"] }
